# TaskLib

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  Task.h  TaskManager.h  main.cpp
src/TaskHandling/: CPP11Helpers.h  Task.h  TaskManager.h
src/Utils/: CPP11Helpers.h
tests/: CMakeLists.txt  RunAllTests.cpp  TaskManagerTests.h  TaskTests.h
thread/: mingw.condition_variable.h  mingw.mutex.h  mingw.shared_mutex.h  mingw.thread.h
